<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?attr/actionBarSize"
    android:paddingTop="@dimen/toolbar_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorMuted"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/editListItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/list_item_title_hint"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
            android:minHeight="@dimen/min_clickable_height"
            android:backgroundTint="@color/colorMuted"
            app:layout_constraintEnd_toEndOf="@+id/spinnerLists"
            app:layout_constraintStart_toStartOf="@+id/spinnerLists"
            app:layout_constraintTop_toBottomOf="@+id/spinnerLists" />

        <EditText
            android:id="@+id/editListItemDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/list_item_desc_hint"
            android:inputType="textMultiLine|textAutoCorrect"
            android:minHeight="@dimen/min_clickable_height"
            android:backgroundTint="@color/colorMuted"
            app:layout_constraintEnd_toEndOf="@+id/spinnerLists"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/spinnerLists"
            app:layout_constraintTop_toBottomOf="@+id/editListItemTitle" />

        <Spinner
            android:id="@+id/spinnerLists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/list_spinner_content_desc"
            android:minHeight="@dimen/min_clickable_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editListItemQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="4"
            android:hint="@string/list_item_quantity"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/min_clickable_height"
            android:text="@string/default_quantity"
            android:backgroundTint="@color/colorMuted"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/spinnerLists"
            app:layout_constraintTop_toBottomOf="@+id/editListItemDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="X"
            app:layout_constraintEnd_toStartOf="@+id/editListItemPrice"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editListItemQuantity"
            app:layout_constraintTop_toBottomOf="@+id/editListItemDescription" />

        <EditText
            android:id="@+id/editListItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="7"
            android:inputType="none|numberDecimal"
            android:minHeight="@dimen/min_clickable_height"
            android:text="@string/default_price"
            android:textAlignment="textEnd"
            android:backgroundTint="@color/colorMuted"
            app:layout_constraintEnd_toStartOf="@+id/listItemCurrency"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/editListItemDescription" />

        <TextView
            android:id="@+id/listItemCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/default_currency"
            app:layout_constraintEnd_toEndOf="@+id/spinnerLists"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editListItemPrice"
            app:layout_constraintTop_toBottomOf="@+id/editListItemDescription" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="editListItemQuantity, textView, editListItemPrice, listItemCurrency" />

        <FrameLayout
            android:id="@+id/itemImageContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/rounded_rectangle_2"
            app:layout_constraintEnd_toEndOf="@+id/editListItemDescription"
            app:layout_constraintStart_toStartOf="@+id/editListItemQuantity"
            app:layout_constraintTop_toBottomOf="@+id/editListItemPrice"
            android:animateLayoutChanges="true">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/itemImage2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_item_lg"
                android:contentDescription="@string/list_item_image_desc"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:shapeAppearanceOverlay="@style/RoundedImageView"
                app:srcCompat="@drawable/shoe" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/itemImage2Small"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_item_sm"
                android:contentDescription="@string/list_item_image_desc"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/RoundedImageView"
                app:srcCompat="@drawable/shoe" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/imageControls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rectangle_2"
                android:backgroundTint="#59D9D9D9"
                android:gravity="center|start">


                <ImageButton
                    android:id="@+id/btnAddItemImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/button_add_item_image"
                    android:minHeight="@dimen/min_clickable_height"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_menu_camera" />

                <ImageButton
                    android:id="@+id/btnExpand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/button_minimize"
                    android:minHeight="@dimen/min_clickable_height"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_caret_down_bold_24dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
