<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/ic_list_24dp"
            android:checked="true"
            android:title="Lists" />
        <item
            android:id="@+id/nav_prices"
            android:icon="@drawable/ic_tag_price_24dp"
            android:title="Prices" />

    </group>

    <item
        android:id="@+id/nav_item_history"
        android:title="Recently viewed">
        <menu>
            <group android:checkableBehavior="single">
                <!-- dynamic list history items populated here -->
            </group>
        </menu>
    </item>


    <group
        android:id="@+id/nav_group_extra"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recently_notes"
            android:icon="@drawable/ic_garbage_bin_24dp"
            android:title="Deleted" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_outline_24dp"
            android:title="Settings" />
        <item
            android:id="@+id/nav_pricing"
            android:icon="@drawable/ic_premium_24dp"
            android:title="Upgrade" />
        <item
            android:id="@+id/nav_help_and_feedback"
            android:icon="@drawable/ic_help_24dp"
            android:title="Help &amp; feedback" />
    </group>



    <group
        android:id="@+id/nav_group_legal_terms"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_privacy_policy_and_terms_of_service"
            android:title="Privacy Policy. Terms of Service"/>
    </group>


</menu>
